welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: value update is not a member of String
	if (litMessage() = "R" ) {droite()
            ^BDRBuggle:6: error: value update is not a member of String
	else if (litMessage() = "L") {gauche()
                 ^BDRBuggle:8: error: value update is not a member of String
	else if (litMessage() = "I") {gauche()
                 ^BDRBuggle:11: error: value update is not a member of String
	else if (litMessage() = "A") {avance()}
                 ^BDRBuggle:12: error: value update is not a member of String
	else if (litMessage() = "B") {avance()
                 ^BDRBuggle:14: error: value update is not a member of String
	else if (litMessage() = "C") {avance()
                 ^BDRBuggle:17: error: value update is not a member of String
	else if (litMessage() = "Z") {recule()}
                 ^BDRBuggle:18: error: value update is not a member of String
	else if (litMessage() = "Y") {recule()
                 ^BDRBuggle:20: error: value update is not a member of String
	else if (litMessage() = "X") {recule()
                 ^